# cs629_spring25

./: .gitignore  README.md
dependencies/: README.md
finalproject/: CMakeLists.txt  README.md
homework1/: BUILDING.md  CMakeLists.txt  README.md
homework2/: CMakeLists.txt  README.md
homework2/src/: main.c  model.h
homework3/: README.md
homework3/src/: bezier.cpp  bezier.h  line.cpp  line.h  main.cpp
homework3/src/renderer/: renderer_types.cpp  renderer_types.h
homework3/src/vect/: vect.cpp  vect.h
homework4/: CMakeLists.txt  README.md
homework4/src/: debugger.cpp  debugger.h  intersection.h  main.cpp  raytracer.cpp  raytracer.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
homework4/src/configfile/: parser.cpp  scenedata.h
homework4/src/renderer/: color.cpp  color.h  filewriter.cpp  filewriter.h  frame.cpp  frame.h  renderer.cpp  renderer.h
homework4/src/vect/: vect.cpp  vect.h
